--- a/client_service/src/app/auth/sign-in/page.module.css
+++ b/client_service/src/app/auth/sign-in/page.module.css
@@ -1,4 +1,4 @@
-.registration__container {
+.container {
   background-color: #1E1E1E;
   height: 100vh;
   display: flex;
@@ -7,20 +7,20 @@
   position: relative;
 }
 
-.registration__box {
+.box {
   padding: 60px 30px;
   border-radius: 15px;
   background: #181818;
 }
 
-.registration__logo {
+.logo {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 15px;
 }
 
-.registration__title {
+.title {
   color: #FFF;
   text-align: center;
   font-family: Commissioner;
@@ -30,7 +30,7 @@
   line-height: normal;
 }
 
-.registration__top__button {
+.top__button {
   color: #999;
   text-align: center;
   font-family: Commissioner;
@@ -41,23 +41,10 @@
   margin-top: 15px;
 }
 
-.registration__form {
+.form {
   margin-top: 30px;
   display: flex;
   flex-direction: column;
-}
-
-.registration__input {
-  border: 1px solid #3C3C3C;
-  background: #181818;
-  width: 360px;
-  padding: 15px;
-  outline: none;
-  border-radius: 10px;
-}
-
-.registration__input:not(:last-child) {
-  margin-bottom: 15px;
 }
 
 .registration__button {
@@ -77,7 +64,7 @@
   line-height: normal;
 }
 
-.registration__link {
+.link {
   margin-top: 15px;
   color: #FFF;
   font-family: Commissioner;
