--- a/client_service/src/app/dashboard/Menu/index.module.css
+++ b/client_service/src/app/dashboard/Menu/index.module.css
@@ -22,3 +22,12 @@
 .item_icon {
   cursor: pointer;
 }
+
+.icon_text {
+  display: flex;
+  justify-content: center;
+  text-transform: uppercase;
+  width: 100%;
+  text-align: center;
+  cursor: pointer;
+}
