--- a/client_service/src/app/auth/sign-up/page.module.css
+++ b/client_service/src/app/auth/sign-up/page.module.css
@@ -39,6 +39,21 @@
   flex-direction: column;
 }
 
+.fieldset {
+  border: none
+}
+
+.legend {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
 .registration__button {
   padding: 15px;
   align-self: stretch;
