added requests on alert and confrim pages

--- a/client_service/src/app/auth/confirm/page.module.css
+++ b/client_service/src/app/auth/confirm/page.module.css
@@ -39,6 +39,7 @@
   line-height: normal;
   margin-top: 15px;
   width: 323px;
+  margin-bottom: 60px;
 }
 
 .box__bottom {
@@ -51,6 +52,10 @@
 
   display: flex;
   justify-content: flex-end;
+}
+
+.box__bottom__close {
+  display: none;
 }
 
 .continue__button {
