--- a/client_service/src/app/auth/alert/page.module.css
+++ b/client_service/src/app/auth/alert/page.module.css
@@ -27,3 +27,22 @@
   line-height: normal;
   margin-top: 15px;
 }
+
+.send__button {
+  color: #181818;
+  font-family: Commissioner;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+
+  border-radius: 10px;
+  background: #FFF;
+
+  display: inline-flex;
+  padding: 10px 15px;
+  align-items: center;
+
+  cursor: pointer;
+  margin-top: 65px;
+}
