--- a/client_service/src/app/dashboard/Menu/Tab/index.module.css
+++ b/client_service/src/app/dashboard/Menu/Tab/index.module.css
@@ -5,4 +5,14 @@
 
 .item_icon {
   cursor: pointer;
+  
+}
+
+.item_icon svg path {
+  fill: var(--color8);
+  stroke: var(--color1);
+}
+
+.item_icon svg rect {
+  fill: var(--color8);
 }
