--- a/client_service/src/app/dashboard/index.module.css
+++ b/client_service/src/app/dashboard/index.module.css
@@ -1,6 +1,6 @@
 
 .page {
-  background-color: var(--backgroud-color);
+  background-color: var(--color2);
   min-height: 100vh;
   min-width: 100vw;
 
