--- a/client_service/src/app/auth/components/Input/index.module.css
+++ b/client_service/src/app/auth/components/Input/index.module.css
@@ -3,8 +3,8 @@
 }
 
 .input {
-  border: 1px solid #3C3C3C;
-  background: #181818;
+  border: 1px solid var(--color4);
+  background: var(--color1);
   width: 360px;
   padding: 15px;
   outline: none;
