--- a/client_service/src/app/auth/components/languageButton/index.module.css
+++ b/client_service/src/app/auth/components/languageButton/index.module.css
@@ -8,8 +8,10 @@
   gap: 10px;
   flex: 1 0 0;
   border-radius: 10px;
-  border: 1px solid #5A5A5A;
-  color: #999;
+
+  border: 1px solid var(--color4);
+  background-color: var(--color1);
+  color: var(--color6);
 
   height: 42px;
 }
@@ -24,9 +26,9 @@
   gap: 10px;
   flex: 1 0 0;
   border-radius: 10px;
-  border: 1px solid #5A5A5A;
-  color: #181818;
-  background: #FFF;
+  border: 1px solid var(--color1);
+  color: var(--color1);
+  background: var(--color8);
   
   height: 42px;
 }
