--- a/client_service/src/app/auth/confirm/page.module.css
+++ b/client_service/src/app/auth/confirm/page.module.css
@@ -1,7 +1,7 @@
 .box {
   height: 584px;
   width: 800px;
-  background-color: #181818;
+  background-color: var(--color1);
   text-align: center;
   border-radius: 15px;
   position: relative;
@@ -19,7 +19,7 @@
 }
 
 .title {
-  color: #FFF;
+  color: var(--color8);
   text-align: center;
   font-family: Commissioner;
   font-size: 36px;
@@ -29,7 +29,7 @@
 }
 
 .subtitle {
-  color: #5A5A5A;
+  color: var(--color7);
   text-align: center;
   font-family: Commissioner;
   font-size: 16px;
@@ -47,7 +47,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  border-top: 1px solid #1E1E1E;
+  border-top: 1px solid var(--color3);
 
   display: flex;
   justify-content: flex-end;
