--- a/client_service/src/app/auth/language/page.module.css
+++ b/client_service/src/app/auth/language/page.module.css
@@ -1,7 +1,7 @@
 .box {
   height: 584px;
   width: 800px;
-  background-color: #181818;
+  background-color: var(--color1);
   text-align: center;
   border-radius: 15px;
   position: relative;
@@ -11,7 +11,7 @@
 }
 
 .title {
-  color: #FFF;
+  color: var(--color8);
   text-align: center;
   font-family: Commissioner;
   font-size: 36px;
@@ -21,7 +21,7 @@
 }
 
 .subTitle {
-  color: #999;
+  color: var(--color6);
   text-align: center;
   font-family: Commissioner;
   font-size: 16px;
@@ -44,7 +44,7 @@
 }
 
 .chooseLanguageTitle {
-  color: #FFF;
+  color: var(--color8);
   text-align: center;
   font-family: Commissioner;
   font-size: 16px;
@@ -59,7 +59,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  border-top: 1px solid #1E1E1E;
+  border-top: 1px solid var(--color2);
 
   display: flex;
   justify-content: flex-end;
@@ -75,15 +75,15 @@
   border: none;
   cursor: pointer;
   text-decoration: none;
-  background: #FFF;
-  color: #181818;
+  background: var(--color8);
+  color: var(--color1);
 }
 
 .back__button {
   padding: 10px 15px;
   align-items: center;
   border-radius: 10px;
-  border: 1px solid #1E1E1E;
+  border: 1px solid var(--color2);
   text-decoration: none;
   color: #3C3C3C;
   font-family: Commissioner;
