--- a/client_service/src/app/auth/password-recovery/request/page.module.css
+++ b/client_service/src/app/auth/password-recovery/request/page.module.css
@@ -37,15 +37,11 @@
   margin-top: 15px;
 }
 
-.main__block {
+.input__block {
   margin-top: 30px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 349px;
 }
 
-.main__block input {
+.input__block input {
   border: 1px solid var(--color4);
   background: var(--color1);
   width: 360px;
@@ -53,6 +49,26 @@
   outline: none;
   border-radius: 10px;
   margin-bottom: 30px;
+}
+
+.main__text {
+  color: #FFF;
+  text-align: center;
+  font-family: Commissioner;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  width: 360px;
+
+  margin-top: 30px;
+}
+
+.main__block {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 275px;
 }
 
 .main__block button {
@@ -70,15 +86,4 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-}
-
-.main__text {
-  color: #FFF;
-  text-align: center;
-  font-family: Commissioner;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  width: 360px;
 }
