--- a/client_service/src/app/auth/password-recovery/request/page.module.css
+++ b/client_service/src/app/auth/password-recovery/request/page.module.css
@@ -52,7 +52,6 @@
 }
 
 .main__text {
-  color: #FFF;
   text-align: center;
   font-family: Commissioner;
   font-size: 16px;
@@ -74,13 +73,13 @@
 .main__block button {
   width: 360px;
   border-radius: 10px;
-  background: white;
+  background: var(--color8);
   padding: 15px;
   outline: none;
   border: none;
   cursor: pointer;
 
-  color: #181818;
+  color: var(--color1);
   font-family: Commissioner;
   font-size: 16px;
   font-style: normal;
