--- a/client_service/src/app/auth/components/Input/index.module.css
+++ b/client_service/src/app/auth/components/Input/index.module.css
@@ -12,6 +12,16 @@
   margin-bottom: 15px;
 }
 
+.input:-webkit-autofill,
+.input:-webkit-autofill:hover, 
+.input:-webkit-autofill:focus, 
+.input:-webkit-autofill:active{
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: var(--color8);
+  transition: background-color 5000s ease-in-out 0s;
+  box-shadow: inset 0 0 20px 20px var(--color1);
+}
+
 .element {
   position: absolute;
   top: 15px;
