--- a/client_service/src/app/dashboard/Charts/index.module.css
+++ b/client_service/src/app/dashboard/Charts/index.module.css
@@ -1,12 +1,16 @@
 .container {
   margin-top: 20px;
-  height: 565px;
+  height: 100%;
   width: 100%;
   max-width: 888px;
   padding: 20px;
 
   border-radius: 15px;
   background: var(--color1);
+}
+
+.header {
+  height: 100%;
 }
 
 .header__bottom {
@@ -43,5 +47,5 @@
   padding-top: 30px;
 
   width: 100%;
-  height: 500px;
+  height: calc(100% - 56px);
 }
