--- a/client_service/src/app/dashboard/index.module.css
+++ b/client_service/src/app/dashboard/index.module.css
@@ -1,29 +1,38 @@
 
 .page {
   background-color: var(--color2);
-  min-height: 100vh;
-  min-width: 100vw;
+  height: 100vh;
+  width: 100vw;
 
   padding: var(--page-padding);
 
   display: flex;
-  justify-content: space-between;
-  gap: 20px;
+  justify-content: flex-start;
 }
 
 .content {
-  width: 100%;
+  width: calc(100% - 120px);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 20px;
 }
 
 .content__main {
+  width: 100%;
+  max-width: 100%;
   display: flex;
   gap: 20px;
+  height: calc(100% - 256px);
 }
 
 .content__center {
-  width: 66%;
+  width: 67%;
+  max-width: 888px;
 }
 
 .content__sidebar {
   width: 33%;
+  max-width: 410px;
 }
