--- a/client_service/src/app/dashboard/timeStatistic/index.module.css
+++ b/client_service/src/app/dashboard/timeStatistic/index.module.css
@@ -4,7 +4,9 @@
   padding: 20px;
   flex-direction: column;
   align-items: flex-start;
-  /* gap: 20px; */
+
+  max-width: 390px;
+
   flex-shrink: 0;
 
   border-radius: 15px;
