--- a/client_service/src/app/dashboard/timeStatistic/index.module.css
+++ b/client_service/src/app/dashboard/timeStatistic/index.module.css
@@ -1,6 +1,5 @@
 .container {
   display: flex;
-  height: 474px;
   padding: 20px;
   flex-direction: column;
   align-items: flex-start;
@@ -10,11 +9,12 @@
   flex-shrink: 0;
 
   border-radius: 15px;
-  background: #181818;
+  background: var(--color1);
+  padding-bottom: 15px;
 }
 
 .timer__block {
-  border-bottom: 1px solid #1E1E1E;
+  border-bottom: 1px solid var(--color3);
   margin-bottom: 20px;
   width: 100%;
 }
@@ -32,7 +32,7 @@
 }
 
 .timer__text {
-  color: #FFF;
+  color: var(--color8);
   font-family: Commissioner;
   font-size: 64px;
   font-style: normal;
@@ -63,7 +63,7 @@
 }
 
 .visit__header p {
-  color: #FFF;
+  color: var(--color8);
   font-family: Commissioner;
   font-size: 16px;
   font-style: normal;
@@ -83,7 +83,7 @@
 }
 
 .visitButtons p {
-  color: #5A5A5A;
+  color: var(--color6);
   font-family: Commissioner;
   font-size: 10px;
   font-style: normal;
@@ -110,7 +110,7 @@
 }
 
 .header__button_active {
-  border: 1px solid #999;
+  border: 1px solid var(--color7);
   color: var(--color8);
 }
 
