added the first type of widget

--- a/client_service/src/app/dashboard/index.module.css
+++ b/client_service/src/app/dashboard/index.module.css
@@ -34,5 +34,9 @@
 
 .content__sidebar {
   width: 33%;
+  height: 100%;
   max-width: 410px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
